k8s/eks/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jerney-db
  namespace: jerney
  labels:
    app.kubernetes.io/name: jerney-db
    app.kubernetes.io/part-of: jerney
    app.kubernetes.io/component: database
spec:
  replicas: 1
  strategy:
    type: Recreate # Recreate strategy is used for stateful applications like databases to avoid data corruption during updates.
  selector:
    matchLabels:
      app.kubernetes.io/name: jerney-db
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jerney-db
        app.kubernetes.io/part-of: jerney
        app.kubernetes.io/component: database
    spec:
      # Security: Don't automount service account token (DB doesnt need to access the Kubernetes API)
      automountServiceAccountToken: false
      tolerations:
        - key: "karpenter.sh/disrupted"
          operator: "Exists"
          effect: "NoSchedule"
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
              protocol: TCP
          envfrom:
            - secretRef:
                name: jerney-db-secret
          volumeMounts:
            - name: db-storage
              mountPath: /var/lib/postgresql/data
              subPath: pgdata
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"

      # Security Context
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false # postgres image runs as non-root user by default, so readOnlyRootFilesystem can be set to true if needed.
            runAsNonRoot: false # postgres image runs as non-root user by default, so this can be set to true if needed.

          livenessProbe:
            exec:
              command: ["pg_isready", "-U", "jerney_user", "-d", "jerney_db"]
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 5
          readinessProbe:
            exec:
              command: ["pg_isready", "-U", "jerney_user", "-d", "jerney_db"]   
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
      volumes:
        - name: db-storage
          persistentVolumeClaim:
            claimName: jerney-db-pvc
