k8s/eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jerney-ingress
  namespace: jerney
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - host: jerney.rohith-gowda.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jerney-frontend
                port:
                  number: 80
